--- a/digdag/docker-compose.yml
+++ b/digdag/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       ENCRYPTION_KEY: MDEyMzQ1Njc4OTAxMjM0NQ== # echo -n "0123456789012345"
     build:
       context: .
+      # dockerfile: ./Dockerfile_09
     image: mydigdag
     ports:
       - 65432:65432
